# baibais

./: .gitignore  LICENSE  README.md  mintty.exe.stackdump  pyproject.toml  requirements.txt
data/xiuxian/: ._xiuxian_impart.db  config.json  items.json  xiuxian.db  xiuxian_impart.db  境界.json  灵根.json  突破概率.json
data/xiuxian/impart/: impart_person.json
data/xiuxian/work/: 暗杀.json  等级奖励稿.json  镇妖.json
data/xiuxian/丹药/: 丹药.json  炼丹丹药.json  神物.json
plugins/: __init__.py
plugins/xiuxian/: __init__.py  xiuxian_config.py
plugins/xiuxian/admin_comd/: __init__.py
plugins/xiuxian/auctions/: __init__.py
plugins/xiuxian/back/: __init__.py
plugins/xiuxian/bank/: __init__.py
plugins/xiuxian/boss/: __init__.py
plugins/xiuxian/bounty_order/: __init__.py
plugins/xiuxian/crontab/: __init__.py
plugins/xiuxian/fusion/: __init__.py
plugins/xiuxian/help_msg/: __init__.py
plugins/xiuxian/information/: __init__.py  calculator.py  download_user_img.py  information_background.py
plugins/xiuxian/lists/: __init__.py
plugins/xiuxian/ranking _list/: __init__.py
plugins/xiuxian/reborn/: __init__.py
plugins/xiuxian/resource/: __init__.py
plugins/xiuxian/secret_realm/: __init__.py  jsondata.py  riftmake.py
plugins/xiuxian/stone_jianding/: __init__.py
plugins/xiuxian/switch/: __init__.py
plugins/xiuxian/xiuxian_back/: __init__.py  back_util.py  backconfig.py  config.json  shop.json
plugins/xiuxian/xiuxian_bank/: __init__.py  config.json
plugins/xiuxian/xiuxian_base/: __init__.py
plugins/xiuxian/xiuxian_beg/: __init__.py
(+102 files in other folders)
