[project]
name = "baibais"
version = "0.1.0"
description = "baibais"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["./plugins"]
builtin_plugins = []


